# UnofficialNessieV2ClientPython

./: .gitignore  NessieV2Client.py  client.md  pyproject.toml  readme.md  requirements.txt
src/unofficial-nessie-v2/: client.py
src/unofficial_nessie_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
