[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unofficial_nessiev2"
version = "0.0.1"
authors = [
  { name="Alex Merced", email="alex.merced@dremio.com" },
]
description = "An unofficial example of a Nessie V2 Client"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlexMercedCoder/UnofficialNessieV2ClientPython"
"Bug Tracker" = "https://github.com/AlexMercedCoder/UnofficialNessieV2ClientPython"